--- a/WinCorePatPranali/src/app/screens/accounts/account-search/account-search.component.html
+++ b/WinCorePatPranali/src/app/screens/accounts/account-search/account-search.component.html
@@ -38,7 +38,7 @@
                                     <button type="button" tabindex="0" class="dropdown-item" (click)="addAccount('saving-accounts')">Saving</button>
                                     <button type="button" tabindex="0" class="dropdown-item" (click)="addAccount('deposit-accounts')">Deposit</button>
                                     <button type="button" tabindex="0" class="dropdown-item" (click)="addAccount('loan-accounts')">Loan</button>
-                                    <button type="button" tabindex="0" class="dropdown-item" (click)="addAccount('banks')">Other</button>
+                                    <button type="button" tabindex="0" class="dropdown-item" (click)="addAccount('other-accounts')">Other</button>
                                 </div>
                             </div>
     
