--- a/WinCorePatPranali/src/app/screens/accounts/saving-accounts/saving-accounts.component.html
+++ b/WinCorePatPranali/src/app/screens/accounts/saving-accounts/saving-accounts.component.html
@@ -19,7 +19,7 @@
                         </div>
 
                         <div class="col-md-3 position-relative form-group">
-                            <label for="txtCode" class="">A/C Number</label>
+                            <label for="txtCode" class="">Account Number</label>
                             <div class="input-group">
                                 <input tabindex="2" type="text" readonly class="form-control" formControlName="glAccountNumberStr">
                             </div>
@@ -242,7 +242,7 @@
                                             </div>
 
                                             <div class="col-md-3 position-relative form-group">
-                                                <label for="txtCode" class="">A/C Opening Date <span
+                                                <label for="txtCode" class="">Account Opening Date <span
                                                         class="mandatory">*</span></label>
                                                 <input tabindex="23" type="date" class="mb-2 form-control"
                                                     formControlName="accountOpeningDate">
