--- a/WinCorePatPranali/src/app/screens/accounts/loan-accounts/loan-accounts.component.css
+++ b/WinCorePatPranali/src/app/screens/accounts/loan-accounts/loan-accounts.component.css
@@ -50,3 +50,9 @@
     cursor: not-allowed;
     pointer-events: none;
    }
+
+.search-box-color{
+    background-color: #f5f5f5;
+    border-radius: 5px;
+    border: 2px solid #f5f5f5;
+}
