--- a/WinCorePatPranali/src/app/app-router/app-router.component.html
+++ b/WinCorePatPranali/src/app/app-router/app-router.component.html
@@ -528,7 +528,8 @@
                                 </li>
                                
                                 <li>
-                                    <a href="#">
+                                    <a [class.mm-active]="isMenuSelected('opening-balance')"
+                                        (click)="configClick('opening-balance')">
                                         <i class="metismenu-icon pe-7s-note2"></i>
                                         Account Opening Balance
                                     </a>
@@ -540,9 +541,10 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a [class.mm-active]="isMenuSelected('balance-cert')"
+                                        (click)="configClick('balance-cert')">
                                         <i class="metismenu-icon pe-7s-note2"></i>
-                                        Balance certificate Printing
+                                        Balance Certificate Printing
                                     </a>
                                 </li>
                             </ul>
